welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:18: error: ':' expected but ')' found.
def isFacingTrail(c):Boolean = {
                   ^SlugSnail:34: error: identifier expected but '}' found.
}
^